--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "auth with jwt",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "vindresh singh",
   "license": "ISC",
@@ -17,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.0",
     "nodemailer": "^6.4.16",
+    "nodemon": "^2.0.6",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0"
   }
