--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "nodemon index.js",
+    "dev": "node index.js"
   },
   "author": "vindresh singh",
   "license": "ISC",
@@ -15,11 +16,15 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
+    "express-session": "^1.17.1",
+    "googleapis": "^65.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.0",
     "nodemailer": "^6.4.16",
-    "nodemon": "^2.0.6",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
   }
 }
